dev_ws/log/build_2023-11-01_14-00-41/py_img_stream/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/media/sf_sdp_12_ws/sdp-team-12/dev_ws/install/py_img_stream/lib/python3.10/site-packages/py_img_stream/image_pub.py", line 62
    if(int(marker_id[0]) not in self.currently_seen_ids)
                                                        ^
SyntaxError: expected ':'

